--- a/webpack/sass/main.scss
+++ b/webpack/sass/main.scss
@@ -1,4 +1,5 @@
-@import "~bootstrap/dist/css/bootstrap.css";
+@import '../../node_modules/bootstrap/dist/css/bootstrap.css';
+
 html,body {
   font-family: Roboto, Helvetica, sans-serif;
 }
