--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -3,20 +3,36 @@
 {% load static %}
 
 {% block contents %}
+
     <div class="row login">
         <div class="col-md-5 col-md-offset-3">
             <div class="panel panel-default">
                 <div class="panel-heading text-center" id="login-title">Let Connect Login</div>
                 <div class="panel-body">
-                    <form class="form-horizontal">
+                    <form class="form-horizontal" method="post" action="login">
+
+                        {% if messages %}
+                            <ul class="messages">
+                                {% for message in messages %}
+                                    <li{% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %}>{{ message }}</li>
+                                {% endfor %}
+                            </ul>
+                        {% endif %}
+
+
+                        {% csrf_token %}
                         <div class="form-group">
                             <div class="col-md-12">
-                                <input type="email" class="form-control" id="email" placeholder="Email">
+                                <label class="control-label" for="username">User Name</label>
+                                <input type="text" class="form-control" id="username" name="username"
+                                       placeholder="Username">
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-md-12">
-                                <input type="password" class="form-control" id="password" placeholder="Password">
+                                <label class="control-label" for="password">Password</label>
+                                <input type="password" class="form-control" id="password" name="password"
+                                       placeholder="Password">
                             </div>
                         </div>
                         <div class="form-group">
@@ -24,12 +40,13 @@
                                 <button type="button" class="btn btn-link">Forgot Password?</button>
                             </div>
                             <div class="col-md-6 text-right">
-                                <button type="button" class="btn btn-primary" id="login-button">Login</button>
+                                <button type="submit" class="btn btn-primary" id="login-button">Login</button>
                             </div>
                         </div>
 
                         <div class="col-md-12">
-                            <button type="button" id="social-google" class="btn btn-primary btn-lg btn-block">Log in with Google
+                            <button type="button" id="social-google" class="btn btn-primary btn-lg btn-block">Log in
+                                with Google
                             </button>
                         </div>
 
