--- a/user/templates/layout/default.html
+++ b/user/templates/layout/default.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Let Connect{% block title %} {% endblock title %}</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="{% static "css/vendor.css" %}" rel="stylesheet"/>
     <link href="{% static "css/main.css" %}" rel="stylesheet"/>
 </head>
 <body>
