--- a/user/templates/signup.html
+++ b/user/templates/signup.html
@@ -4,59 +4,22 @@
 
 {% block contents %}
 
-    <div class="row signup">
-        <div class="col-md-5 col-md-offset-3">
-            <div class="panel panel-default">
-                <div class="panel-heading text-center" id="signup-title">Let Connect Sign Up</div>
-                <div class="panel-body">
-                    <form class="form-horizontal" method="post" action="signup">
+<h2>Sign up</h2>
+<form method="post">
+  {% csrf_token %}
+  {% for field in form %}
+    <p>
+      {{ field.label_tag }}<br>
+      {{ field }}
+      {% if field.help_text %}
+        <small style="color: grey">{{ field.help_text }}</small>
+      {% endif %}
+      {% for error in field.errors %}
+        <p style="color: red">{{ error }}</p>
+      {% endfor %}
+    </p>
+  {% endfor %}
+  <button type="submit">Sign up</button>
+</form>
 
-                        {% csrf_token %}
-                        <div class="form-group">
-                            <div class="col-md-12">
-                                <label class="control-label" for="realname">Real Name</label>
-                                <input type="text" class="form-control" id="realname" name="realname"
-                                       placeholder="Real Name">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-md-12">
-                                <label class="control-label" for="username">User Name</label>
-                                <input type="text" class="form-control" id="username" name="username"
-                                       placeholder="Username">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-md-12">
-                                <label class="control-label" for="email">Email</label>
-                                <input type="text" class="form-control" id="email" name="email"
-                                       placeholder="Enter Valid Email">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-md-12">
-                                <label class="control-label" for="password">Password</label>
-                                <input type="password" class="form-control" id="password" name="password"
-                                       placeholder="Password">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-md-12">
-                                <label class="control-label" for="cpassword">Confirm Password</label>
-                                <input type="password" class="form-control" id="cpassword" name="cpassword"
-                                       placeholder="Confirm Password">
-                            </div>
-                        </div>
-
-                            <div class="col-md-12">
-                                <button type="submit" class="btn btn-primary btn-lg btn-block" id="signup-button">Sign Up</button>
-                            </div>
-
-                    </form>
-                </div>
-            </div>
-
-
-        </div>
-    </div>
 {% endblock contents %}
