--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -45,8 +45,9 @@
                         </div>
 
                         <div class="col-md-12">
-                            <button type="button" id="social-google" class="btn btn-primary btn-lg btn-block">Log in
-                                with Google
+                            <button type="button" id="social-google" class="btn btn-primary btn-lg btn-block">
+                              <a href="{% url 'social:begin' 'facebook' %}">Login with Facebook</a>
+
                             </button>
                         </div>
 
