Edit Profile Info functionality added

--- a/user/templates/profile.html
+++ b/user/templates/profile.html
@@ -2,5 +2,32 @@
 {% block title %} | Profile {% endblock %}
 {% load static %}
 
+
+    <div class="col-md-5 col-md-offset-3">
+        <div class="panel panel-default">
+            <div class="panel-heading text-center" id="login-title">Welcome</div>
+            <div class="panel-body">
+
+                    <div class="discussion">
+                        <div class="col-md-12">
+                          <<h1>Discussions</h1>
+                        </div>
+                    </div>
+                    <div class="Sent Requests">
+                        <div class="col-md-12">
+                          <<h1>Sent Requests</h1>
+                        </div>
+                    </div>
+                    <div class="Received Requests">
+                        <div class="col-md-12">
+                          <<h1>Received Requests</h1>
+                        </div>
+                    </div>
+
+            </div>
+        </div>
+
+
+    </div>
 {% block contents %}
 {% endblock contents %}
