Bootstrap added to Signup and Edit Profile forms

--- a/user/templates/layout/default.html
+++ b/user/templates/layout/default.html
@@ -16,5 +16,6 @@
     {% endblock %}
 </div>
 <script type="text/javascript" src="{% static "js/bundle.js" %}"></script>
+<!-- Latest compiled and minified CSS -->
 </body>
 </html>
