--- a/user/templates/signup.html
+++ b/user/templates/signup.html
@@ -4,22 +4,36 @@
 
 {% block contents %}
 
-<h2>Sign up</h2>
-<form method="post">
-  {% csrf_token %}
-  {% for field in form %}
-    <p>
-      {{ field.label_tag }}<br>
-      {{ field }}
-      {% if field.help_text %}
-        <small style="color: grey">{{ field.help_text }}</small>
-      {% endif %}
-      {% for error in field.errors %}
-        <p style="color: red">{{ error }}</p>
-      {% endfor %}
-    </p>
-  {% endfor %}
-  <button type="submit">Sign up</button>
-</form>
+<div class="container">
+  <div class="col-sm-6">
+    <div class="panel panel-default">
+      <div class="panel-heading text-center"> Sign Up </div>
+        <div class="panel-body">
+          <form method="post" class="form-horizontal">
+            {% csrf_token %}
+            {% for field in form %}
+              <p>
+                {{ field.label_tag }}<br>
+                {{ field }}
+                {% if field.help_text %}
+                  <small style="color: grey">{{ field.help_text }}</small>
+                {% endif %}
+                {% for error in field.errors %}
+                  <p style="color: red">{{ error }}</p>
+                {% endfor %}
+              </p>
+            {% endfor %}
+            <button type="submit">Sign up</button>
+          </form>
 
+        </div>
+
+      </div>
+
+
+    </div>
+
+  </div>
+
+</div>
 {% endblock contents %}
