Links and Layout Change of different pages

--- a/user/templates/edit_profile.html
+++ b/user/templates/edit_profile.html
@@ -1,4 +1,4 @@
-{% extends 'layout/default.html' %}
+{% extends 'layout/two-column.html' %}
 {% block title %} | Sign Up {% endblock %}
 {% load static %}
 
