--- a/friendship/templates/findfriend.html
+++ b/friendship/templates/findfriend.html
@@ -1,13 +1,13 @@
-{% extends 'layout/default.html' %}
+{% extends 'layout/two-column.html' %}
 {% block title %} | Find Friend {% endblock %}
 {% load static %}
 
 {% block contents %}
 
 <div class="row login">
-    <div class="col-md-5 col-md-offset-3">
+    <div class="col-md-12 col-md-offset-3">
         <div class="panel panel-default">
-            <div class="panel-heading text-center" id="login-title">Let Connect Login</div>
+            <div class="panel-heading text-center" >Find Friends</div>
             <div class="panel-body">
                 <form class="form-horizontal" method="post" action="login">
 
@@ -21,7 +21,7 @@
                     </div>
                     <div class="form-group">
                         <div class="col-md-12 text-right">
-                            <button type="submit" class="btn btn-primary" id="login-button">Send Friend Request</button>
+                            <button type="button" class="btn btn-primary">Send Friend Request</button>
                         </div>
                     </div>
 
