--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -36,10 +36,13 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <div class="col-md-6">
+                            <div class="col-md-4">
                                 <button type="button" class="btn btn-link">Forgot Password?</button>
                             </div>
-                            <div class="col-md-6 text-right">
+                            <div class="col-md-4 text-right">
+                                <a href="{% url 'signup' %}"><button type="button" class="btn btn-primary" id="signup-button">Sign Up</button></a>
+                            </div>
+                            <div class="col-md-4 text-right">
                                 <button type="submit" class="btn btn-primary" id="login-button">Login</button>
                             </div>
                         </div>
