--- a/user/templates/signup.html
+++ b/user/templates/signup.html
@@ -1,4 +1,4 @@
-{% extends 'layout/default.html' %}
+{% extends 'layout/two-column.html' %}
 {% block title %} | Sign Up {% endblock %}
 {% load static %}
 
