--- a/user/templates/layout/two-column.html
+++ b/user/templates/layout/two-column.html
@@ -54,7 +54,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="{% url 'profileinfo' %}">Profile Info</a></li>
                         <li><a href="{% url 'logout' %}">Logout</a></li>
-                        <li><a href="{% url 'findfriend' %}">Find Friends</a></li>
+                        <li><a href="{% url 'find_friends' %}">Find Friends</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href="#">Separated link</a></li>
                     </ul>
