--- a/friendship/templates/findfriend.html
+++ b/friendship/templates/findfriend.html
@@ -51,10 +51,20 @@
             $("#friend-list").load("{% url 'list_friends' %}" + "?name=" + friendName);
         }
 
-        $(document).ready(function(e) {
-            $("#find-friends").submit(function(e) {
+        $(document).ready(function (e) {
+            $("#find-friends").submit(function (e) {
                 e.preventDefault();
                 loadFriends($("#username").val());
+            });
+
+            $("#friend-list").on("click", ".add-friend", function (e) {
+                let request_to = $(this).attr("data-id");
+                $(this).prop("disabled", true);
+                $.post('{% url 'new_request' %}', {
+                    request_to : request_to,
+                },function(res) {
+                    console.log(res);
+                });
             });
         });
     </script>
