--- a/user/templates/layout/two-column.html
+++ b/user/templates/layout/two-column.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -30,29 +30,19 @@
         <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="{% if request.resolver_match.url_name == "discussion_list" %}active{% endif %}">
-                    <a href="{% url 'discussion_list' %}">Discussions <span class="sr-only">(current)</span></a>
+                    <a href="{% url 'discussion_list' %}">Discussions</a>
                 </li>
-                <li><a href="#">Link</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                       aria-expanded="false">Dropdown <span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li><a href="#">One more separated link</a></li>
-                    </ul>
+                <li class="{% if request.resolver_match.url_name == "find_friends" %}active{% endif %}">
+                    <a href="{% url 'find_friends' %}">Find Friends</a>
                 </li>
+
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false">{{ request.user.profile.real_name }} <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="{% url 'profileinfo' %}">Profile Info</a></li>
+                        <li><a href="{% url 'profileinfo' id=request.user.id %}">Profile Info</a></li>
                         <li><a href="{% url 'logout' %}">Logout</a></li>
                         <li><a href="{% url 'find_friends' %}">Find Friends</a></li>
                         <li role="separator" class="divider"></li>
@@ -64,7 +54,7 @@
     </div><!-- /.container-fluid -->
 </nav>
 
-<div class="container profile-page">
+<div class="container-fluid page-contents">
 
     <div class="row">
         <div class="col-md-3 hidden-sm left-sidebar">
