--- a/discussion/templates/comments.html
+++ b/discussion/templates/comments.html
@@ -1,15 +1,17 @@
 {% for comment in comments %}
     <div class="comment">
         <div class="img-wrapper">
-            <img class="user-image" src="https://via.placeholder.com/150" alt="User Image"/>
+            <img class="user-image" {% if comment.comment_by.profile.avatar != None %}
+                 src="{{ comment.comment_by.profile.avatar.url }}" {% else %} src="https://via.placeholder.com/150" {% endif %} alt="User Image"/>
         </div>
         <div class="comment-text">
             <div class="content">
-                <a class="user-name" href="#">{{ comment.comment_by.profile.real_name }}</a>
+                <a class="user-name" href="{% url 'profileinfo' id=comment.comment_by.id %}">{{ comment.comment_by.profile.real_name }}</a>
                 <p class="text">{{ comment.text }}</p>
                 <p class="time">{{ comment.created_at }}</p>
             </div>
         </div>
 
     </div>
+    <hr />
 {% endfor %}
