--- a/user/templates/edit_profile.html
+++ b/user/templates/edit_profile.html
@@ -4,36 +4,85 @@
 
 {% block contents %}
 
-<div class="container">
-  <div class="col-sm-6">
-    <div class="panel panel-default">
-      <div class="panel-heading text-center"> Edit Profile Info </div>
-        <div class="panel-body">
-          <form method="post">
-            {% csrf_token %}
-            {% for field in form %}
-              <p>
-                {{ field.label_tag }}<br>
-                {{ field }}
-                {% if field.help_text %}
-                  <small style="color: grey">{{ field.help_text }}</small>
-                {% endif %}
-                {% for error in field.errors %}
-                  <p style="color: red">{{ error }}</p>
-                {% endfor %}
-              </p>
-            {% endfor %}
-            <button type="submit">Submit</button>
-          </form>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="panel panel-default">
+                <div class="panel-heading text-center"> Edit Profile Info</div>
+                <div class="panel-body">
+                    <form method="post" enctype="multipart/form-data">
+                        {% csrf_token %}
+
+                        {% if form.errors %}
+                            {% for field in form %}
+                                {% for error in field.errors %}
+                                    <div class="alert alert-danger">
+                                        <strong>{{ error|escape }} {{ field.name }}</strong>
+                                    </div>
+                                {% endfor %}
+                            {% endfor %}
+                            {% for error in form.non_field_errors %}
+                                <div class="alert alert-danger">
+                                    <strong>{{ error|escape }}</strong>
+                                </div>
+                            {% endfor %}
+                        {% endif %}
+
+                        <div class="form-group">
+                            {{ form.real_name.errors }}
+                            <label for="{{ form.real_name.id_for_label }}">Real Name</label>
+                            {{ form.real_name }}
+                        </div>
+
+                        <div class="form-group">
+                            {{ form.avatar.errors }}
+                            <label for="{{ form.avatar.id_for_label }}">Avatar</label>
+                            {{ form.avatar }}
+                        </div>
+
+                        <div class="form-group">
+                            {{ form.username.errors }}
+                            <label for="username">User Name</label>
+                            <input id="username" type="text" class="form-control" disabled
+                                   value="{{ request.user.username }}"/>
+                        </div>
+
+                        <div class="form-group">
+                            {{ form.username.errors }}
+                            <label for="email">Email</label>
+                            <input id="email" type="text" class="form-control" disabled
+                                   value="{{ request.user.email }}"/>
+                        </div>
+
+
+                        <div class="form-group">
+                            {{ form.city.errors }}
+                            <label for="{{ form.city.id_for_label }}">Avatar</label>
+                            {{ form.city }}
+                        </div>
+
+                        <div class="form-group">
+                            {{ form.country.errors }}
+                            <label for="{{ form.country.id_for_label }}">Avatar</label>
+                            {{ form.country }}
+                        </div>
+
+                        <div class="form-group">
+                            {{ form.phone.errors }}
+                            <label for="{{ form.phone.id_for_label }}">Avatar</label>
+                            {{ form.phone }}
+                        </div>
+
+                    <div class="form-group">
+                            {{ form.dob.errors }}
+                            <label for="{{ form.dob.id_for_label }}">Avatar</label>
+                            {{ form.dob }}
+                        </div>
+
+                        <button type="submit" class="btn btn-default">Update</button>
+                    </form>
+                </div>
+            </div>
         </div>
-
-      </div>
-
-
     </div>
-
-  </div>
-
-</div>
 
 {% endblock contents %}
