--- a/user/templates/profile_info.html
+++ b/user/templates/profile_info.html
@@ -1,17 +1,112 @@
 {% extends 'layout/two-column.html' %}
-{% block title %} | Profile {% endblock %}
+{% block title %} | {{ user.profile.real_name }}'s Profile {% endblock %}
 {% load static %}
 
 {% block contents %}
-<div class="container">
-    <h1>Profile</h1>
-    <p>User Name: {{user}}</p>
-    <p>Real Name: {{user.profile.realname}}</p>
-    <p>Email Name: {{user.email}}</p>
-    <p>City: {{user.profile.city}}</p>
-    <p>Country: {{user.profile.country}}</p>
-    <p>Phone: {{user.profile.phone}}</p>
-</div>
-<a href="{% url 'editprofile' %}"><button type="submit">Edit Profile Info</button></a>
+
+    <div class="row user-profile">
+
+        <div class="col-xs-12">
+            <div class="panel panel-default">
+                <div class="panel-heading text-center"> User Information</div>
+                <div class="panel-body">
+                    <div class="text-center">
+                        <img class="user-image" {% if user.profile.avatar != None %}
+                             src="{{ user.profile.avatar.url }}" {% else %}
+                             src="https://via.placeholder.com/150" {% endif %} alt="User Profile Image"/>
+                        <a href="{% url 'profileinfo' id=user.id %}"><h3>{{ user.profile.real_name }}</h3></a>
+                    </div>
+                    <table class="table table-hover">
+                        <tbody>
+                        <tr>
+                            <td>Full Name :</td>
+                            <td>{{ user.profile.real_name }}</td>
+                        </tr>
+                        <tr>
+                            <td>User Name :</td>
+                            <td>{{ user.username }}</td>
+                        </tr>
+                        <tr>
+                            <td>Email :</td>
+                            <td>{{ user.email }}</td>
+                        </tr>
+                        <tr>
+                            <td>Date of Birth :</td>
+                            <td>{{ user.profile.dob }}</td>
+                        </tr>
+                        <tr>
+                            <td>City :</td>
+                            <td>{{ user.profile.city }}</td>
+                        </tr>
+                        <tr>
+                            <td>Country :</td>
+                            <td>{{ user.profile.country }}</td>
+                        </tr>
+                        <tr>
+                            <td>Mobile # :</td>
+                            <td>{{ user.profile.phone }}</td>
+                        </tr>
+                        </tbody>
+                    </table>
+
+                    {% if user.id == request.user.id %}
+                        <hr/>
+                        <div class="text-center">
+                            <a href="{% url 'editprofile' %}" class="btn btn-default btn-primary">Update Profile</a>
+                            <a href="#" class="btn btn-primary btn-danger">Delete Profile</a>
+                        </div>
+
+                    {% endif %}
+                </div>
+
+            </div>
+        </div>
+
+        <div class="col-xs-12">
+            <div class="panel panel-default">
+                <div class="panel-heading text-center"> Friends</div>
+                <div class="panel-body">
+
+                </div>
+            </div>
+        </div>
+
+        <div class="col-xs-12">
+            <div class="panel panel-default">
+                <div class="panel-heading text-center"> Discussions</div>
+                <div class="panel-body">
+                    <table class="table table-bordered table-hover">
+                        <thead>
+                        <tr>
+                            <th class="text-center">Sr.</th>
+                            <th>Topic</th>
+                            <th>Created By</th>
+                            <th class="text-center">Actions</th>
+                        </tr>
+                        </thead>
+
+                        <tbody>
+                        {% for d in discussions %}
+                            <tr>
+                                <td class="text-center">{{ forloop.counter }}</td>
+                                <td>{{ d.topic }}</td>
+                                <td>
+                                    <a href="{% url 'profileinfo' id=d.created_by.id %}">
+                                        {{ d.created_by.profile.real_name }}
+                                    </a>
+                                </td>
+                                <td class="text-center">
+                                    <a href="{% url 'view_discussion' id=d.id %}" class="btn btn-default">
+                                        Go to discussion
+                                    </a>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
 
 {% endblock contents %}
