--- a/user/templates/signup.html
+++ b/user/templates/signup.html
@@ -1,39 +1,40 @@
-{% extends 'layout/two-column.html' %}
+{% extends 'layout/default.html' %}
 {% block title %} | Sign Up {% endblock %}
 {% load static %}
 
 {% block contents %}
 
-<div class="container">
-  <div class="col-sm-6">
-    <div class="panel panel-default">
-      <div class="panel-heading text-center"> Sign Up </div>
-        <div class="panel-body">
-          <form method="post" class="form-horizontal">
-            {% csrf_token %}
-            {% for field in form %}
-              <p>
-                {{ field.label_tag }}<br>
-                {{ field }}
-                {% if field.help_text %}
-                  <small style="color: grey">{{ field.help_text }}</small>
-                {% endif %}
-                {% for error in field.errors %}
-                  <p style="color: red">{{ error }}</p>
-                {% endfor %}
-              </p>
-            {% endfor %}
-            <button type="submit">Sign up</button>
-          </form>
+    <div class="row login">
+        <div class="col-sm-offset-3 col-sm-6">
+            <div class="panel panel-default">
+                <div class="panel-heading text-center"> Sign Up</div>
+                <div class="panel-body">
+                    <form method="post" class="">
+                        {% csrf_token %}
+                        {% for field in form %}
+
+                            <div class="form-group">
+                                {{ field.errors }}
+                                <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                                {{ field }}
+                            </div>
+
+
+                        {% endfor %}
+                        <div class="text-right">
+                            <button type="submit" class="btn btn-primary">Sign up</button>
+                        </div>
+
+                    </form>
+
+                </div>
+
+            </div>
+
 
         </div>
 
-      </div>
-
-
     </div>
 
-  </div>
-
-</div>
+    </div>
 {% endblock contents %}
