--- a/user/templates/edit_profile.html
+++ b/user/templates/edit_profile.html
@@ -56,25 +56,25 @@
 
                         <div class="form-group">
                             {{ form.city.errors }}
-                            <label for="{{ form.city.id_for_label }}">Avatar</label>
+                            <label for="{{ form.city.id_for_label }}">City</label>
                             {{ form.city }}
                         </div>
 
                         <div class="form-group">
                             {{ form.country.errors }}
-                            <label for="{{ form.country.id_for_label }}">Avatar</label>
+                            <label for="{{ form.country.id_for_label }}">Country</label>
                             {{ form.country }}
                         </div>
 
                         <div class="form-group">
                             {{ form.phone.errors }}
-                            <label for="{{ form.phone.id_for_label }}">Avatar</label>
+                            <label for="{{ form.phone.id_for_label }}">Phone</label>
                             {{ form.phone }}
                         </div>
 
                     <div class="form-group">
                             {{ form.dob.errors }}
-                            <label for="{{ form.dob.id_for_label }}">Avatar</label>
+                            <label for="{{ form.dob.id_for_label }}">Date of Birth</label>
                             {{ form.dob }}
                         </div>
 
