--- a/user/templates/login.html
+++ b/user/templates/login.html
@@ -25,7 +25,7 @@
                             <div class="col-md-12">
                                 <label class="control-label" for="username">User Name</label>
                                 <input type="text" class="form-control" id="username" name="username"
-                                       placeholder="Username">
+                                       placeholder="Username" autofocus>
                             </div>
                         </div>
                         <div class="form-group">
@@ -37,12 +37,10 @@
                         </div>
                         <div class="form-group">
                             <div class="col-md-4">
-                                <button type="button" class="btn btn-link">Forgot Password?</button>
+{#                                <button type="button" class="btn btn-link">Forgot Password?</button>#}
                             </div>
-                            <div class="col-md-4 text-right">
-                                <a href="{% url 'signup' %}"><button type="button" class="btn btn-primary" id="signup-button">Sign Up</button></a>
-                            </div>
-                            <div class="col-md-4 text-right">
+                            <div class="col-md-8 text-right">
+                                <a href="{% url 'signup' %}" class="btn btn-primary">Sign Up</a>
                                 <button type="submit" class="btn btn-primary" id="login-button">Login</button>
                             </div>
                         </div>
