--- a/user/templates/layout/two-column.html
+++ b/user/templates/layout/two-column.html
@@ -55,6 +55,20 @@
 
 <div class="container-fluid page-contents">
 
+
+    {% if messages %}
+        <div class="row">
+            <div class="col-md-offset-2 col-md-8">
+                <ul class="messages">
+                    {% for message in messages %}
+                        <li{% if message.tags %} class="alert alert-{{ message.tags }}"{% endif %}>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
+    {% endif %}
+
+
     <div class="row">
         <div class="col-md-2 hidden-sm left-sidebar">
 
