Friendship module UI is changed now for buttons

--- a/friendship/templates/friend_list.html
+++ b/friendship/templates/friend_list.html
@@ -24,7 +24,7 @@
                     {% elif f.id in sent %}
                         <span class="btn btn-warning">Request Sent</span>
                     {% else %}
-                        <a href="#" class="btn btn-default btn-info add-friend" data-id="{{ f.id }}">Add Friend</a>
+                        <button class="btn btn-default btn-info add-friend" data-id="{{ f.id }}">Add Friend</button>
                     {% endif %}
                 </td>
             </tr>
