--- a/friendship/templates/findfriend.html
+++ b/friendship/templates/findfriend.html
@@ -60,10 +60,27 @@
             $("#friend-list").on("click", ".add-friend", function (e) {
                 let request_to = $(this).attr("data-id");
                 $(this).prop("disabled", true);
-                $.post('{% url 'new_request' %}', {
-                    request_to : request_to,
-                },function(res) {
-                    console.log(res);
+                let that = $(this);
+
+                $.ajax({
+                    method: "POST",
+                    url: '{% url 'new_request' %}',
+                    data: {
+                        request_to: request_to,
+                    },
+                    dataType: "json",
+                    success: function (res) {
+                        if(res.result) {
+                            that.text("Request Sent");
+                            that.removeClass("btn-info").addClass("btn-warning");
+                        }
+                    },
+                    error: function (res) {
+                        console.log("Error", res);
+                    },
+                    complete: function(res) {
+                        console.log("Complete", res);
+                    }
                 });
             });
         });
