User can delete his account now. It'll also delete all related data too

--- a/discussion/templates/discussions.html
+++ b/discussion/templates/discussions.html
@@ -28,10 +28,15 @@
                                 <td>{{ forloop.counter }}</td>
                                 <td>{{ discussion.topic }}</td>
                                 <td>{{ discussion.text }}</td>
-                                <td>{{ discussion.created_by.profile.real_name }}</td>
+                                <td>
+                                    <a href="{% url 'profileinfo' id=discussion.created_by.id %}">
+                                        {{ discussion.created_by.profile.real_name }}
+                                    </a>
+                                </td>
                                 <td>{{ discussion.created_at }}</td>
                                 <td>
-                                    <a href="{% url 'view_discussion' id=discussion.id %}" class="btn btn-default btn-info">Participate</a>
+                                    <a href="{% url 'view_discussion' id=discussion.id %}"
+                                       class="btn btn-default btn-info">Participate</a>
                                 </td>
                             </tr>
                         {% endfor %}
