--- a/user/templates/profile_info.html
+++ b/user/templates/profile_info.html
@@ -53,7 +53,31 @@
                         <hr/>
                         <div class="text-center">
                             <a href="{% url 'editprofile' %}" class="btn btn-default btn-primary">Update Profile</a>
-                            <a href="#" class="btn btn-primary btn-danger">Delete Profile</a>
+                            <a href="#" class="btn btn-primary btn-danger" data-toggle="modal"
+                               data-target="#deleteModal">Delete Profile</a>
+                        </div>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog"
+                             aria-labelledby="myModalLabel">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span></button>
+                                        <h4 class="modal-title" id="myModalLabel">Are you sure?</h4>
+                                    </div>
+                                    <div class="modal-body">
+                                        <h3>Are you sure that you want to <span class="label-warning">delete</span> your account?</h3>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-default" data-dismiss="modal">Close
+                                        </button>
+                                        <a href="{% url 'delete_account' %}" type="button" class="btn btn-danger">Yes,
+                                            Delete</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
 
                     {% endif %}
